# ModelCache

./: flask4modelcache.py  flask4multicache.py  main.py  pyproject.toml
modelcache/config/: milvus_config.ini  mysql_config.ini  redis_config.ini
